feat(company):新增生成邀请码接口